--- a/WebContent/web/css/style.css
+++ b/WebContent/web/css/style.css
@@ -1,6 +1,6 @@
 /* 초기화 */
 /* backgrounc-color: fdfdfd; */
-/* font-color: #998c9b;*/
+/* font-color: #998c9b;  #726973; */
 *{
     margin: 0; padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -16,7 +16,7 @@ a{
 label{
     text-align: center;
     width: 2em;
-    color:#998c9b;
+    color:#726973;
 }
 .btn{
     display: block;
@@ -37,8 +37,8 @@ h1{
     margin-top:0em;
     margin-bottom: 2em;
 }
-h3{color: #998c9b;}
-
+h3{color: #726973;}
+h4{color:#726973;}
 /* 지울것 임시지정*/
 .meno{
     height:600px;
@@ -189,7 +189,7 @@ h3{color: #998c9b;}
     padding: 2em 1em;
 }
 .page > h1 {
-    color: #998c9b;
+    color: #726973;
     text-align: center;
 }
 /* login_page -----------------------------------------------*/
@@ -206,7 +206,7 @@ h3{color: #998c9b;}
     float:left;
     text-align: center;
     width: 2em;
-    color:#998c9b;
+    color:#726973;
 }
 .login_con > div > input{
     float: left;
@@ -224,7 +224,7 @@ h3{color: #998c9b;}
     float:left;
     text-align: right;
     width: 3em;
-    color:#998c9b;
+    color:#726973;
     font-size: 1.5em;
 }
 .last_lable{
@@ -237,6 +237,21 @@ h3{color: #998c9b;}
     text-align: center;
     height: 2em;
 }
+.tel{
+    margin-left:7em;
+}
+.tel>input:first-child{
+    width:3em;
+}
+.tel>input, .tel>span{
+    width:4em;
+    float: left;
+}
+.tel > span{
+    text-align: center;
+    width:23px;
+}
+
 /* baby_join --------------------------------------------------------- */
 
 .baby_join{
@@ -325,6 +340,111 @@ h3{color: #998c9b;}
     width: 20em;
     height: 2em;
     margin-bottom: 3em;
+}
+
+.video_play{
+    width: 80%;
+    height: 20em;
+    background-color: #adc9fa;
+    margin: 0 auto;
+
+
+}
+/* statistic --------------------------------*/
+#content > h2{
+    margin-left: 0.5em;
+    color:#726973;
+}
+.st_title{
+    margin-top: 2em;
+}
+
+.chart > td{
+    width: 3em;
+    text-align: center;
+    color: #726973;
+}
+.statistic > table{
+    border: solid #fdfdfd;
+    margin: 0 auto;
+}
+.statistic td{
+    border: solid 1px #fdfdfd;
+}
+.statistic tr:nth-child(even){
+    background-color: #fcd2dc;
+}
+/* history --------------------------------- */
+.alam{
+    width:100%;
+    height:30em;
+}
+.alam > ul{
+    width: 100%;
+    height:100%;
+    position: relative
+}
+.alam > ul > li{
+    width: 100%;
+    height: 4em;
+    background-color:#de87ac;
+    margin:1em 0em;
+    text-align: center;
+    line-height: 4em;
+    border-radius: 1em;
+    color: #fdfdfd
+}
+
+/* baby_life ---------------------------------*/
+
+.life_icon{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.life_icon > li{
+    float:left;
+    cursor: pointer;
+    margin-left: 2em;
+}
+.life_icon > li > img{display: block;}
+.life_icon::after{clear: both; content:""; display:block;}
+.life_con{
+    margin-top: 2em;
+}
+.life_list > li > span{
+    width: 10em;
+    height: 100%;
+    color:#fdfdfd;
+}
+.life_list > li > span:last-child > a{
+    display: block;
+    width: 30px;
+    height: 100%;
+    background: url(../img/close.png) center no-repeat;
+    float: right;
+    margin-right:1em;
+    cursor: pointer;
+}
+/* ------------------------------------------ */
+.commu table{
+    border: solid 0px #ddd;
+    width: 100%;
+    height: 100%;
+    color: #726973;
+}
+.commu thead{
+    background-color: #fcd2dc;
+}
+.commu_btn{
+    margin-top: 1em;
+    width: 4em;
+    height: 2em;
+    background-color: #de87ac;
+    color: #fdfdfd;
+    text-align: center;
+    line-height: 2em;
+    border-radius: 0.5em;
 }
 /* ---------------------------------------- */
 #footer{
