--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -178,7 +178,6 @@ h4{color:#726973;}
     /* background-color: #fdfdfd; */
     /* exam  */
     height: 100%;
-    
 }
 .page{
     background-color: #fdfdfd;
@@ -192,6 +191,24 @@ h4{color:#726973;}
     color: #726973;
     text-align: center;
 }
+/* index ---------------------------------------------------*/
+.meno{
+    width: 70%;
+    height: 18em;
+    border-radius: 130%;
+    background-color: #adc9fa;
+    margin: 0 auto;
+    margin-bottom: 3em;
+    margin-top: 3em;
+}
+.meno_con{
+    padding:1em;
+    color: #726973;
+}
+.meno_con > h4{
+    margin-bottom: 0.5em;
+}
+
 /* login_page -----------------------------------------------*/
 .login_con > div{
     padding: 1em 1em 1em 3em;
@@ -446,6 +463,21 @@ h4{color:#726973;}
     line-height: 2em;
     border-radius: 0.5em;
 }
+/* commu_write------------------------------- */
+.commu_write form > table input{
+    width: 20em;
+}
+.commu_write_btn{
+    border-style: none;
+    cursor: pointer;
+}
+.commu_write_btn2{
+    width:7em;
+}
+.td_write{
+    height: 10em;
+}
+
 /* ---------------------------------------- */
 #footer{
     min-width: 100%;
