--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -52,7 +52,7 @@ h4{color:#726973;}
     background-color:#fff;
     position: fixed;
     z-index: 999;
-    background: url(../img/open.png) no-repeat center #fff;
+    background: url(/img/open.png) no-repeat center #fff;
     top:-28em;
     display: block;
 }
@@ -87,14 +87,18 @@ h4{color:#726973;}
 .open3{
     background: url(../img/open_3.png) no-repeat center;
     width:380px;
-    left:1em;
+    z-index: 99;
+    left:2em;
     top:32em;
+   
 }
 
 /* ---------------------------------------- */
 #bk{
-    background: url(../img/bk2.jpg) no-repeat center;
-    background-size: 100% 100%;
+    background: url(../img/bkbk.jpg) no-repeat;
+    /* background-size: 100% 100%; */
+    width: 100%;
+    height: 100%;
     position: relative;
     max-width: 568px;
     margin-left: auto;
@@ -181,6 +185,7 @@ h4{color:#726973;}
 }
 .page{
     background-color: #fdfdfd;
+    /* background-color: rgba(255,255,255,0.8); */
     margin-top:15em;
     /* exam  */
     height: 800px;
@@ -204,11 +209,55 @@ h4{color:#726973;}
     margin: 0 auto;
     margin-bottom: 3em;
     margin-top: 3em;
+    position: relative;
+    overflow: hidden;
 }
+.meno > div:first-child{
+    width: 400%;
+    height: 400%;
+    left:-53px;
+    top:-2em;
+    position: absolute;
+    background: url(/img/main1.png) no-repeat;
+    animation: main1 1s ease-in infinite alternate-reverse; 
+    /* alternate-reverse 오른쪽->왼쪽 실행 */
+}
+@keyframes main1{
+    0%{
+        left: 1em;
+        
+    }
+    100%{
+        left:-1em;
+      
+    }
+}
+.meno > div:last-child{
+    width: 400%;
+    height: 400%;
+    left:0;
+    position: absolute;
+    background: url(/img/main2.png) no-repeat;
+    animation: main2 1s ease-in infinite alternate;
+}
+@keyframes main2{
+    0%{
+        left: 1em;
+        
+    }
+    100%{
+        left:-1em;
+      
+    }
+}
+
+
+
 .index_con > h2{text-align: center;}
 .meno_con{
     padding:1em;
     color: #726973;
+    
 }
 .meno_con > h4{
     margin-bottom: 0.5em;
@@ -378,29 +427,41 @@ h4{color:#726973;}
 
 }
 /* statistic --------------------------------*/
+#content{
+    overflow: hidden;
+}
 #content > h2{
     margin-left: 0.5em;
     color:#726973;
 }
-.st_title{
-    margin-top: 2em;
+.statistic > ul{
+    width: 100%;
+    display: block;
+    margin: 2em 9%;
+  
+}
+.statistic > ul::after{clear: both; content: ""; display: block;}
+.statistic > ul >li{
+    display: block;
+    float:left;
+    width: 6em;
+    height: 2em;
+    line-height: 2em;
+    text-align: center;
+    /* background: linear-gradient(to left, #fcc4d1, #d7c0f8); */
+    background-color: #fcc4d1;
+    border-radius: 0.5em;
+    margin-right: 1em;
+    color: fdfdfd;
+    cursor: pointer;
+}
+.chart{
+    width: 100%;
+    height: 321px;
+    overflow: hidden;
 }
 
-.chart > td{
-    width: 3em;
-    text-align: center;
-    color: #726973;
-}
-.statistic > table{
-    border: solid #fdfdfd;
-    margin: 0 auto;
-}
-.statistic td{
-    border: solid 1px #fdfdfd;
-}
-.statistic tr:nth-child(even){
-    background-color: #fcd2dc;
-}
+
 /* history --------------------------------- */
 .alam{
     width:100%;
@@ -493,7 +554,8 @@ h4{color:#726973;}
 /* ---------------------------------------- */
 #footer{
     min-width: 100%;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
+    background-color: #fdfdfd;
     /* exam  */
     height: 100px;
 } 
