--- a/WebContent/web/css/style.css
+++ b/WebContent/web/css/style.css
@@ -181,7 +181,7 @@ h4{color:#726973;}
 #content{
     /* background-color: #fdfdfd; */
     /* exam  */
-    height: 100%;
+    height: 80em;
 }
 .page{
     background-color: #fdfdfd;
