--- a/WebContent/web/css/style.css
+++ b/WebContent/web/css/style.css
@@ -199,6 +199,55 @@ h4{color:#726973;}
 /* index_before ------------------------------------------- */
 /* .index_before_con > h2 */
 
+/* pop_con 팝업메시지창------------------------------------------------- */
+.popup{cursor: pointer;}
+.pop_bg{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* background-color: #ddd; */
+    top:0; right:0;
+}
+.pop_bg > div{
+    position: absolute;
+    top: 40%;
+    margin-left: 50%;
+    transform: translate(-50%);
+    background-color: rgba(210, 152, 222, 0.9);
+    width: 20em;
+    height: 11em;
+    padding: 2em;
+    border-radius: 1em;
+
+}
+
+.pop_bg > div > h2{
+    margin-left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+    color:#fdfdfd;
+    margin-bottom: 0.5em;
+}
+.pop_bg > div > form > div{
+    margin-left: 50%;
+    transform: translate(-50%);
+    width:18em;
+    height: 2em;
+    float:left;
+    margin-bottom:1em;
+}
+.pop_bg > div > form > div> label{color:#fdfdfd !important;}
+
+.pop_con1{
+    margin-left:3em;
+}
+.pop_con2{
+    margin-left:1em;
+}
+.pop_bg input{
+    border-style: none;
+}
 
 /* index ---------------------------------------------------*/
 .meno{
@@ -364,6 +413,9 @@ h4{color:#726973;}
 .my_page{
     height: 800px;
 }
+.my_page a{
+    color: #de87ac;
+}
 .my > h3{
    text-align: center;
 }
@@ -376,17 +428,18 @@ h4{color:#726973;}
 }
 .my_baby{
     position: relative;
+    margin-top:1em;
 }
 .my_baby > div{
     width: 100%;
     height: 2em;
     line-height: 2em;
 }
-.my_baby > div > h4:first-child{
+.my_baby>div>h4:first-child{
     float: left;
     display: block;
 }
-.my_baby > div > h4:last-child{
+.my_baby>div>h4:last-child{
     float: right;
     display: block;
 }
@@ -403,9 +456,12 @@ h4{color:#726973;}
 }
 .mom{
     margin-top:2em;
+    position: relative;
+    margin-bottom: 3em;
 }
 .mom > h4{
-    margin-bottom: 1em;
+    margin-bottom:1em;
+    display: block;
 }
 .my_footer{
     height: 200px;
