--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -114,7 +114,7 @@ h4{color:#726973;}
     /* background-size: 100% 100%; */
     width: 100%;
     /* height:100%; */
-    height: 800px;
+    height: 100%;
     /* 모바일 환경 높이 */
     position: relative;
     max-width: 568px;
