--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -161,7 +161,19 @@ h4{color:#726973;}
     background-size: 50PX;
     cursor: pointer;
 }
+.home{
+    float:right;
+    width: 60px;
+    height: 80px;
+    background: url(/img/home.png) no-repeat center;
+    background-size: 50PX;
+    cursor: pointer;
+}
+
 .right_icon > a{
+    height:80px;
+}
+.home > a{
     height:80px;
 }
 
@@ -234,6 +246,7 @@ h4{color:#726973;}
     height: 100%;
     /* background-color: #ddd; */
     top:0; right:0;
+    z-index: 9;
 }
 .pop_bg > div{
     position: absolute;
@@ -589,7 +602,7 @@ h4{color:#726973;}
     margin-top:0.5em;
 }
 .alam_left_b{
-    background-color: #1a60b1;
+    background-color: #5096e6;
     color:#fdfdfd;
     text-align: center;
     line-height: 1.2em;
@@ -667,18 +680,29 @@ h4{color:#726973;}
     font-weight: bold;
     display:block;
     font-size: 1.2em;
-    margin-top:0.3em;
+    margin-top:0.3em; 
     margin-left: 3em;
 }
-.sleep_color{
-    color:#1a60b1;
+.meal_color >a{
+    display: inline;
+    margin-left: 1em;
+    cursor: pointer;
+}
+.defecate_color{
+    color:#5096e6;
     font-weight: bold;
     display:block;
     font-size: 1.2em;
     margin-top: 0.3em;
     margin-left: 3em;
+    
 }
-.defecate_color{
+.defecate_color > a{
+    display: inline;
+    margin-left: 1em;
+    cursor: pointer;
+}
+.sleep_color{
     color:#fbb554;
     font-weight: bold;
     display:block;
@@ -686,7 +710,163 @@ h4{color:#726973;}
     margin-top: 0.3em;
     margin-left: 3em;
 }
+.sleep_color>a{
+    display: inline;
+    margin-left: 1em;
+    cursor: pointer;
+}
+/* life popup */
+/* meal pop---- */
+.meal_bg{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* background-color: #ddd; */
+    top:0; right:0;
+    z-index: 9;
+}
+.meal_bg > div{
+    position: absolute;
+    top: 40%;
+    margin-left: 50%;
+    transform: translate(-50%);
+    background-color:#fdfdfd;
+    width: 20em;
+    height: 12em;
+    padding: 2em;
+    border-radius: 1em;
+    border: solid 1px #ddd;
+    color:#888;
 
+}
+
+.meal_bg > div > h2{
+    margin-left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+    margin-bottom: 1em;
+}
+.meal_bg > div > form > div{
+    margin-left: 50%;
+    transform: translate(-50%);
+    width:18em;
+    height: 2em;
+    float:left;
+    margin-bottom:1em;
+}
+.meal_con{
+    position:fixed;
+    display:none;
+    z-index: 9999;
+}
+.meal_con > form{
+    text-align: center;
+    line-height: 3em;
+}
+.meal_con> form > input:last-child{
+    width:13em;
+}
+/* defe_pop------ */
+.defe_bg{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* background-color: #ddd; */
+    top:0; right:0;
+    z-index: 9;
+}
+.defe_bg > div{
+    position: absolute;
+    top: 40%;
+    margin-left: 50%;
+    transform: translate(-50%);
+    background-color:#fdfdfd;
+    width: 20em;
+    height: 12em;
+    padding: 2em;
+    border-radius: 1em;
+    border: solid 1px #ddd;
+    color:#888;
+
+}
+
+.defe_bg > div > h2{
+    margin-left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+    margin-bottom: 1em;
+}
+.defe_bg > div > form > div{
+    margin-left: 50%;
+    transform: translate(-50%);
+    width:18em;
+    height: 2em;
+    float:left;
+    margin-bottom:1em;
+}
+.defe_con{
+    position:fixed;
+    display:none;
+}
+.defe_con > form{
+    text-align: center;
+    line-height: 3em;
+}
+.defe_con> form > input:last-child{
+    width:13em;
+}
+/* sleep_pop------ */
+.sleep_bg{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* background-color: #ddd; */
+    top:0; right:0;
+    z-index: 9;
+}
+.sleep_bg > div{
+    position: absolute;
+    top: 40%;
+    margin-left: 50%;
+    transform: translate(-50%);
+    background-color:#fdfdfd;
+    width: 20em;
+    height: 12em;
+    padding: 2em;
+    border-radius: 1em;
+    border: solid 1px #ddd;
+    color:#888;
+
+}
+
+.sleep_bg > div > h2{
+    margin-left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+    margin-bottom: 1em;
+}
+.sleep_bg > div > form > div{
+    margin-left: 50%;
+    transform: translate(-50%);
+    width:18em;
+    height: 2em;
+    float:left;
+    margin-bottom:1em;
+}
+.sleep_con{
+    position:fixed;
+    display:none;
+}
+.sleep_con > form{
+    text-align: center;
+    line-height: 3em;
+}
+.sleep_con> form > input:last-child{
+    width:13em;
+}
 
 /* ------------------------------------------ */
 .commu_table{
