--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -747,7 +747,7 @@ h4{color:#726973;}
     text-align: center;
     margin-bottom: 1em;
 }
-.meal_bg > div > form > div{
+.meal_bg > div > forms > div{
     margin-left: 50%;
     transform: translate(-50%);
     width:18em;
@@ -760,11 +760,11 @@ h4{color:#726973;}
     display:none;
     z-index: 9999;
 }
-.meal_con > form{
+.meal_con > forms{
     text-align: center;
     line-height: 3em;
 }
-.meal_con> form > input:last-child{
+.meal_con> forms > input:last-child{
     width:13em;
 }
 /* defe_pop------ */
@@ -798,7 +798,7 @@ h4{color:#726973;}
     text-align: center;
     margin-bottom: 1em;
 }
-.defe_bg > div > form > div{
+.defe_bg > div > forms > div{
     margin-left: 50%;
     transform: translate(-50%);
     width:18em;
@@ -810,11 +810,11 @@ h4{color:#726973;}
     position:fixed;
     display:none;
 }
-.defe_con > form{
+.defe_con > forms{
     text-align: center;
     line-height: 3em;
 }
-.defe_con> form > input:last-child{
+.defe_con> forms > input:last-child{
     width:13em;
 }
 /* sleep_pop------ */
@@ -848,7 +848,7 @@ h4{color:#726973;}
     text-align: center;
     margin-bottom: 1em;
 }
-.sleep_bg > div > form > div{
+.sleep_bg > div > forms > div{
     margin-left: 50%;
     transform: translate(-50%);
     width:18em;
@@ -860,11 +860,11 @@ h4{color:#726973;}
     position:fixed;
     display:none;
 }
-.sleep_con > form{
+.sleep_con > forms{
     text-align: center;
     line-height: 3em;
 }
-.sleep_con> form > input:last-child{
+.sleep_con> forms > input:last-child{
     width:13em;
 }
 
