--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -549,22 +549,32 @@ h4{color:#726973;}
 .statistic > ul{
     width: 100%;
     display: block;
-    margin: 2em 9%;
+    margin-bottom: 1em;
+    height: 70px;
+    margin-left: 5%;
+  
   
 }
 .statistic > ul::after{clear: both; content: ""; display: block;}
 .statistic > ul >li{
     display: block;
     float:left;
-    width: 6em;
-    height: 2em;
+    width: 60px;
+    height: 70px;
     line-height: 2em;
     text-align: center;
     /* background: linear-gradient(to left, #fcc4d1, #d7c0f8); */
-    background-color: #eac2e3;
+    /* background-color: #eac2e3; */
     border-radius: 0.5em;
-    margin-right: 1em;
+    margin-right: 2em;
     color: #fdfdfd;
+    cursor: pointer;
+}
+
+.statistic > ul >li >img{
+    width: 100%;
+    height: 100%;
+    display: block;
     cursor: pointer;
 }
 .chart{
@@ -753,7 +763,7 @@ h4{color:#726973;}
     text-align: center;
     margin-bottom: 1em;
 }
-.meal_bg > div > form > div{
+.meal_bg > div > forms > div{
     margin-left: 50%;
     transform: translate(-50%);
     width:18em;
@@ -766,11 +776,11 @@ h4{color:#726973;}
     display:none;
     z-index: 9999;
 }
-.meal_con > form{
+.meal_con > forms{
     text-align: center;
     line-height: 3em;
 }
-.meal_con> form > input:last-child{
+.meal_con> forms > input:last-child{
     width:13em;
 }
 /* defe_pop------ */
@@ -804,7 +814,7 @@ h4{color:#726973;}
     text-align: center;
     margin-bottom: 1em;
 }
-.defe_bg > div > form > div{
+.defe_bg > div > forms > div{
     margin-left: 50%;
     transform: translate(-50%);
     width:18em;
@@ -816,11 +826,11 @@ h4{color:#726973;}
     position:fixed;
     display:none;
 }
-.defe_con > form{
+.defe_con > forms{
     text-align: center;
     line-height: 3em;
 }
-.defe_con> form > input:last-child{
+.defe_con> forms > input:last-child{
     width:13em;
 }
 /* sleep_pop------ */
@@ -854,7 +864,7 @@ h4{color:#726973;}
     text-align: center;
     margin-bottom: 1em;
 }
-.sleep_bg > div > form > div{
+.sleep_bg > div > forms > div{
     margin-left: 50%;
     transform: translate(-50%);
     width:18em;
@@ -866,11 +876,11 @@ h4{color:#726973;}
     position:fixed;
     display:none;
 }
-.sleep_con > form{
+.sleep_con > forms{
     text-align: center;
     line-height: 3em;
 }
-.sleep_con> form > input:last-child{
+.sleep_con> forms > input:last-child{
     width:13em;
 }
 
