--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -56,12 +56,11 @@ h1{
     width:1em;
     margin: 0 auto;
 }
-#life_hr{
+.commu_hr{
 	width :0em;
 	margin: 0 auto;
-	margin-bottom:2em;
+	margin-bottom:0.5em;
 }
-
 h3{color: #726973;}
 h4{color:#726973;}
 /* 지울것 임시지정*/
@@ -71,16 +70,19 @@ h4{color:#726973;}
 
 /* -------------------------------------------------------------------- */
 /* open */
-.open{
+#open{
     min-width: 100%;
-    height: 1500px;
-    background-color:#fff;
-    position: fixed;
-    z-index: 999;
-    background: url(../img/open.png) no-repeat center #fff;
-    top:-28em;
-    display: block;
+    height: 100%;
+    background-size: cover;
 }
+#open > span{
+    width:3em;
+    display: block;
+    position: absolute;
+    bottom: 1em;
+
+}
+
 .open > ul{
     position: relative;
     height: 1500px;
@@ -329,7 +331,7 @@ h4{color:#726973;}
     /* height: 3em; */
     position: relative;
     display: block;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
 }
 .index_alam > li:first-child{margin-top: 0em;}
 .index_alam > li{
@@ -578,6 +580,8 @@ h4{color:#726973;}
     height: 70px;
     line-height: 2em;
     text-align: center;
+    /* background: linear-gradient(to left, #fcc4d1, #d7c0f8); */
+    /* background-color: #eac2e3; */
     border-radius: 0.5em;
     margin-right: 2em;
     color: #fdfdfd;
@@ -671,7 +675,33 @@ h4{color:#726973;}
 }
 .life_title{
     margin-top: 5em;
-    margin: 0 auto;
+}
+/* life_search */
+#search{
+    width: 100%;
+    height:2em;
+    display:block;
+    margin-bottom: 1em;
+}
+#search > form{
+    text-align: center;
+}
+#search > form >select{
+    height:2em;
+    margin-right:0.5em;
+}
+#search > form > input:nth-child(2){
+    height:2em;
+    margin-right: 0.5em;
+    padding-left: 0.5em;
+}
+#search > form > input:nth-child(3){
+    height:2em;
+    width: 5em;
+    background-color: #87ded2;
+    border-radius: 0.5em;
+    border: none; 
+    color: #fdfdfd;
 }
 .life_icon{
     width: 100%;
