--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -56,11 +56,6 @@ h1{
     width:1em;
     margin: 0 auto;
 }
-.life_hr{
-	width :0em;
-	margin: 0 auto;
-	margin-bottom:2em;
-}
 .commu_hr{
 	width :0em;
 	margin: 0 auto;
@@ -1024,14 +1019,23 @@ h4{color:#726973;}
 .check > th{
     width:3em;
 }
+
+/* commu_con */
+.commu_con{
+    border: solid 1px #888;
+    border-radius: 0.5em;
+    width:25em;
+    height:3em;
+    padding-left:0.5em;
+}
+.write_con{height:10em}
+
 /* ---------------------------------------- */
 #footer{
     min-width: 100%;
-    /* background-color: #f9f9f9; */
     background-color: #fdfdfd;
     /* exam  */
     height: 100px;
+    text-align: center;
+    margin-top: 5em;
 } 
-.my_footer{
-    height:300px;
-}
