--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -66,6 +66,7 @@ h1{
 	margin: 0 auto;
 	margin-bottom:2em;
 }
+h2{color: #726973;}
 h3{color: #726973;}
 h4{color:#726973;}
 /* 지울것 임시지정*/
@@ -371,6 +372,24 @@ h4{color:#726973;}
     border-radius: 0.5em;
     cursor: pointer;
 }
+/* alam_pop */
+#alam_pop{
+    position: fixed;
+    height: 5em;
+    background-color: red;
+    top:-81px;
+    left:0;
+    right:0;
+    border-radius: 0.5em;
+}
+#alam_pop > h2{
+    text-align: center;
+    line-height: 3em;
+    width: 100%;
+    color:#fdfdfd;
+}
+
+
 
 /* login_page -----------------------------------------------*/
 .login_con > div{
@@ -975,7 +994,7 @@ h4{color:#726973;}
     color:rgb(185, 185, 185);
 }
 .commu_table> tbody >tr>td:nth-child(3){
-    width: 18em;
+    width: 3em;
     color:rgb(185, 185, 185);
 }
 
