--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -382,13 +382,23 @@ h4{color:#726973;}
     right:0;
     border-radius: 0.5em;
 }
+#alam_pop {padding-left: 1em;}
 #alam_pop > h2{
-    text-align: center;
-    line-height: 3em;
-    width: 100%;
+    text-align: left;
+    line-height: 3.5em;
+    width: 62%;
     color:#fdfdfd;
+    float: right;
 }
 
+.defecate{
+    position: relative;
+}
+.defecate>img:nth-child(4){
+    position: absolute;
+    top:-13px;
+    right:5px;
+}
 
 
 /* login_page -----------------------------------------------*/
@@ -772,6 +782,7 @@ h4{color:#726973;}
     margin-left: 1em;
     cursor: pointer;
 }
+
 .defecate_color{
     color:#5096e6;
     font-weight: bold;
