--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -376,7 +376,7 @@ h4{color:#726973;}
 #alam_pop{
     position: fixed;
     height: 5em;
-    background-color: red;
+    background-color: #fd5050;
     top:-81px;
     left:0;
     right:0;
