--- a/WebContent/css/style_sh.css
+++ b/WebContent/css/style_sh.css
@@ -70,16 +70,35 @@ input{
 
 }
 
-#email, #pw, #name, #age, #tel{
+.join_txt{
     width: 20em;
     height: 3em;
     padding-left:1em;
     border-style: none;
     border: solid 1px #ffb9dd;
     border-radius: 0.5em;
-    margin-bottom: 1em; 
     box-sizing: border-box;
 }
+
+.join_mg{margin-bottom: 1em;}
+
+#id_check_off{display:block;}
+#id_check_on{display:none;}
+
+
+
+#pw_check_off{display:block;}
+#pw_check_on{display:none;}
+
+.join_check{
+   font-size:0.5em;
+   text-align: left;
+   display:inherit;
+   color: red;
+   margin-bottom: 1em;
+   padding-left: 1em
+}
+
 .form_box{
     margin-bottom: 3em;
 }
@@ -87,7 +106,7 @@ input{
 .btn{
     margin: 0 auto;
     width: 20em;
-    /* background-color:#ff4a91; */
+    /*background-color:#ff4a91;*/
     background: linear-gradient(to left, #fcc4d1, #d7c0f8);
     border-style: none;
     height: 3em;
@@ -102,18 +121,3 @@ input{
     line-height: 2.5em;
 }
 
-#footer{
-    min-width: 100%;
-    background-color: #fdfdfd;
-    /* exam  */
-    height: 100px;
-    text-align: center;
-    font-size: 0.5em;
-    color: #888;
-} 
-.ft_height{
-    margin-top: 18em;
-}
-.ft_height2{
-    margin-top: 30em;
-}
